Signed up for startup plan

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>NoviceChef</title>
   </head>
   <body>
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
